fixed text align

--- a/public/css/about.css
+++ b/public/css/about.css
@@ -146,7 +146,7 @@
         font-size: 1.7vmax;
     }
 
-    .left-container1 h1, h2 {
+    .left-container1 h1, .left-container1 h2 {
         font-size: x-large;
     }
 
@@ -156,7 +156,7 @@
     ;
     }
 
-    .right-container1 h1, h2 {
+    .right-container1 h1, .right-container1  h2 {
         font-size: x-large;
     }
 
